2000-06-17  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfprintf.c (vfprintf): Fix handling of I flag.
	* stdio-common/tiformat.c (sprint_ints): Add tests for I flag.
	* libio/tst_wprintf.c (main): Add test for I flag.

	* iconv/gconv_trans.c: Implement handling if translit_ignore.
	* locale/langinfo.h: Add entries for translit_ignore information.
	* locale/categories.def: Add entries for new LC_CTYPE elements.
	* locale/C-ctype.c: Add initializers for new fields.  Use NULL
	pointer instead of "" where possible.
	* locale/programs/ld-ctype.c: Write out translit_ignore information.
	* intl/Depend: Add localedata.
	* intl/tst-gettext.c: Call setlocale for LC_CTYPE.
	* intl/tst-gettext.sh: Set LOCPATH to localedata build dir.

2000-06-16  Ulrich Drepper  <drepper@redhat.com>

	* locale/langinfo.h: Add entries for default_missing information.
	* locale/C-ctype.c: Add initializers for new fields.
	* iconv/gconv_trans.c: If nothing matched, try to use default_missing
	information.
	* locale/categories.h: Add entries for all LC_CTYPE values.
	* locale/programs/ld-ctype.c (ctype_output): Write out default_missing
	information.

	* localedata/tst-trans.c: Write out an error message if class is
	not found.

	* iconv/gconv_int.h (norm_add_slashes): Optionally add given suffix.
	* iconv/gconv_open.c: Remove error handling specification from `from'
	character set name.
	* intl/loadmsgcat.c (_nl_load_domain): Call norm_add_slashes with
	new parameter to always enable transliteration.
	* locale/localeinfo.h (LIMAGIC): Bump number because of incompatible
	change.
	(struct locale_data): Add new members use_translit and options.
	* locale/findlocale.c (_nl_find_locale): Set use_translit flag is
	character set name contained modifier TRANSLIT.
	* locale/loadlocale.c (_nl_load_locale): Initialize new use_translit
	and options fields.
	(_nl_unload_locale): Free options string if necessary.
	* wcsmbs/wcsmbsload.c (__wcsmbs_load_conv): Enable translation if